[package]
name = "streammap-ext"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "StreamMap of Tokio with altered `next` that returns when stream is dropped"
homepage = "https://github.com/metalbear-co/streammap-ext"
repository = "https://github.com/metalbear-co/streammap-ext"
keywords = ["tokio", "async", "streammap"]
categories = ["asynchronous"]

[dependencies]
tokio-stream = "0.1"


[dev-dependencies]
# tokio = { version = "1.2.0", path = "../tokio", features = ["full", "test-util"] }
async-stream = "0.3"
# parking_lot = "0.12.0"
tokio-test = "*"
# futures = { version = "0.3", default-features = false }
proptest = "1"

[dev-dependencies.tokio]
version = "1.2.0"
features = ["full", "test-util"]