[package]
name = "streammap-ext"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "StreamMap of Tokio with altered `next` that returns when stream is dropped"
homepage = "https://github.com/metalbear-co/streammap-ext"
repository = "https://github.com/metalbear-co/streammap-ext"
keywords = ["tokio", "async", "streammap"]
categories = ["asynchronous"]

[dependencies]
tokio-stream = "0.1"


[dev-dependencies]
async-stream = "0.3"
tokio-test = "0.4"
proptest = "1"

[dev-dependencies.tokio]
version = "1.2.0"
features = ["full", "test-util"]